--- a/pom.xml
+++ b/pom.xml
@@ -60,10 +60,10 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>hopverkefni.vidmot/hopverkefni.vidmot.PacmanApplication</mainClass>
-                            <launcher>app</launcher>
-                            <jlinkZipName>app</jlinkZipName>
-                            <jlinkImageName>app</jlinkImageName>
+                            <mainClass>hopverkefni.vidmot.PacmanApplication</mainClass>
+                            <launcher>Pacman-leikur</launcher>
+                            <jlinkZipName>Pacman-game</jlinkZipName>
+                            <jlinkImageName>Pacman</jlinkImageName>
                             <noManPages>true</noManPages>
                             <stripDebug>true</stripDebug>
                             <noHeaderFiles>true</noHeaderFiles>
